force-app/main/default/objects/Configuration__c/fields/isShowMessage__c.field-meta.xml
<CustomField>
    <fullName>isShowMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isShowMessage</label>
    <type>Checkbox</type>
</CustomField>