force-app/main/default/objects/Configuration__c/fields/Message_2__c.field-meta.xml
<CustomField>
    <fullName>Message_2__c</fullName>
    <label>Message 2</label>
    <type>TextArea</type>
</CustomField>