force-app/main/default/objects/Configuration__c/fields/Message_3__c.field-meta.xml
<CustomField>
    <fullName>Message_3__c</fullName>
    <label>Message 3</label>
    <type>TextArea</type>
</CustomField>