force-app/main/default/objects/Configuration__c/fields/Message_4__c.field-meta.xml
<CustomField>
    <fullName>Message_4__c</fullName>
    <label>Message 4</label>
    <type>TextArea</type>
</CustomField>