force-app/main/default/objects/Configuration__c/fields/Message_Title__c.field-meta.xml
<CustomField>
    <fullName>Message_Title__c</fullName>
    <label>Message Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>