force-app/main/default/objects/Configuration__c/fields/Pages__c.field-meta.xml
<CustomField>
    <fullName>Pages__c</fullName>
    <inlineHelpText>Like: who is applying, getting started</inlineHelpText>
    <label>Pages</label>
    <type>TextArea</type>
</CustomField>