force-app/main/default/objects/Configuration__c/fields/Stages__c.field-meta.xml
<CustomField>
    <fullName>Stages__c</fullName>
    <label>Stages</label>
    <type>TextArea</type>
</CustomField>