force-app/main/default/objects/Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>isShowMessage__c</columns>
    <columns>Stages__c</columns>
    <columns>Message_Title__c</columns>
    <columns>Message__c</columns>
    <columns>Message_2__c</columns>
    <columns>Message_3__c</columns>
    <columns>Message_4__c</columns>
    <columns>Pages__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>